bugfix: changed inline styles to point to switching root and dark mode variable instead of the hardcoded vars

--- a/src/index.css
+++ b/src/index.css
@@ -81,37 +81,37 @@
 
 @theme inline {
   --font-sans: var(--ncco-font-font-sans-condensed);
-  --color-sidebar-ring: var(--ncco-colors-sidebar-ring-light);
-  --color-sidebar-border: var(--ncco-colors-sidebar-border-light);
-  --color-sidebar-accent-foreground: var(--ncco-colors-sidebar-accent-foreground-light);
-  --color-sidebar-accent: var(--ncco-colors-sidebar-accent-light);
-  --color-sidebar-primary-foreground: var(--ncco-colors-sidebar-primary-foreground-light);
-  --color-sidebar-primary: var(--ncco-colors-sidebar-primary-light);
-  --color-sidebar-foreground: var(--ncco-colors-sidebar-foreground-light);
-  --color-sidebar: var(--ncco-colors-sidebar-light);
-  --color-chart-5: var(--ncco-colors-chart-5-light);
-  --color-chart-4: var(--ncco-colors-chart-4-light);
-  --color-chart-3: var(--ncco-colors-chart-3-light);
-  --color-chart-2: var(--ncco-colors-chart-2-light);
-  --color-chart-1: var(--ncco-colors-chart-1-light);
-  --color-ring: var(--ncco-colors-ring-light);
-  --color-input: var(--ncco-colors-input-light);
-  --color-border: var(--ncco-colors-border-light);
-  --color-destructive: var(--ncco-colors-destructive-light);
-  --color-accent-foreground: var(--ncco-colors-accent-foreground-light);
-  --color-accent: var(--ncco-colors-accent-light);
-  --color-muted-foreground: var(--ncco-colors-muted-foreground-light);
-  --color-muted: var(--ncco-colors-muted-light);
-  --color-secondary-foreground: var(--ncco-colors-secondary-foreground-light);
-  --color-secondary: var(--ncco-colors-secondary-light);
-  --color-primary-foreground: var(--ncco-colors-primary-foreground-light);
-  --color-primary: var(--ncco-colors-primary-light);
-  --color-popover-foreground: var(--ncco-colors-popover-foreground-light);
-  --color-popover: var(--ncco-colors-popover-light);
-  --color-card-foreground: var(--ncco-colors-card-foreground-light);
-  --color-card: var(--ncco-colors-card-light);
-  --color-foreground: var(--ncco-colors-foreground-light);
-  --color-background: var(--ncco-colors-background-light);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --color-foreground: var(--foreground);
+  --color-background: var(--background);
   --radius-sm: var(--ncco-radius-4);
   --radius-md: var(--ncco-radius-6);
   --radius-lg: var(--ncco-radius-8);
